--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,14 @@
-<h1>{{message}}</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    {% if title %}
+    <title>{{title}}</title>
+    {%else%}
+    <title>Welcome to wamlambez base ya movie</title>
+    {% endif %}
+</head>
+<body>
+    
+</body>
+</html>
