popular movies added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     {% if title %}
@@ -8,7 +9,15 @@
     <title>Welcome to wamlambez base ya movie</title>
     {% endif %}
 </head>
+
 <body>
-    
+    <!-- Popular Movies Section -->
+    <h3>Popular Movies</h3>
+    <ul>
+        {% for popular_movie in popular %}
+        <li>{{ popular_movie.title}}</li>
+        {% endfor %}
+    </ul>
 </body>
+
 </html>
