--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,22 +9,22 @@
     <title>Welcome to wamlambez base ya movie</title>
     {% endif %}
 </head>
-
+{% Import 'macros.html'as macro%}
 <body>
-    <!-- Popular Movies Section -->
-    <h3>Popular Movies</h3>
+    <!-- Popular movie -->
+    <h3> Popular Movies</h3>
     <ul>
-        {% for popular_movie in popular %}
-        <li>{{ popular_movie.title}}</li>
-        {% endfor %}
+        {{ macro.displayMovieList(popular)}}
     </ul>
-       <!-- Now showing movie -->
-       <h3>Now Showing</h3>
-       <ul>
-          {% for now_showing_movie in now_showing %}
-              <li>{{ now_showing_movie.title}}</li>
-          {% endfor %}
-      </ul>
+    <!-- Upcoming movie  -->
+    <h3> Upcoming Movies </h3>
+    <ul>
+        {{ macro.displayMovieList(upcoming)}}
+    </ul>
+    <!-- Now showing movie -->
+    <h3>Now Showing</h3>
+    <ul>
+        {{ macro.displayMovieList(now_showing)}}
+    </ul>
 </body>
-
 </html>
