list is working well

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,4 +1,7 @@
-{% macro displayMovieList%}
-    {%for movie in movie_list %}
-        <li>{{movie.title}}</li>
-     {% endfor %}   
+{% macro displayMovieList(movie_list) %}
+
+    {% for movie in movie_list %}
+        <li>{{ movie.title}}</li>
+    {% endfor %}
+    
+{% endmacro %}
