--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,14 @@
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %}
 <!-- Content block -->
 {% block content %}
+
 <div class="container">
+    <form>
+        <input type="text" name="movie_query" placeholder="Search for a Movie" class="form-control">
+        <input type="submit"  value="Submit" class="btn btn-default">
+    </form>
+
+</div>
 
     <!-- Popular movie -->
     <div class="row">
